# struct-with-defaults

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
examples/: simple.rs
macros/: Cargo.toml  README.md
macros/src/: lib.rs
src/: lib.rs  nightly.rs
