[package]
name = "struct-with-defaults"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[workspace]
members = ["macros"]

[workspace.package]
version = "0.0.1"
rust-version = "1.87.0"
edition = "2024"
authors = ["honhimw <honhimw@outlook.com>"]
description = "define struct with default field values like rfc3681 via proc-macro"
keywords = ["default-values", "proc-macro"]
license = "MIT"
repository = "https://github.com/honhimW/struct-with-defaults"
readme = "README.md"

[dependencies]
macro3681 = { path = "./macros" }
