[package]
name = "macro3681"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }

[lib]
name = "macro3681"
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "2", features = ["full"] }
